--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "marked": "^0.8.2",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
